--- a/views/verified-email.html
+++ b/views/verified-email.html
@@ -106,7 +106,6 @@
             color: #f9892a;
             font-weight: 600;
         }
-        
         .button {
             display: inline-block;
             background: linear-gradient(to right, #f9892a, #fcb92c);
@@ -189,7 +188,7 @@
             <p>Votre compte est maintenant entièrement activé. Vous pouvez profiter de toutes les fonctionnalités de notre plateforme.</p>
             <p>Merci de nous avoir rejoint !</p>
             
-            <a href="http://localhost:5173/auth" class="button">Accéder à mon compte</a>
+            <a href="https://ecommercemiel-production.up.railway.app/auth" class="button">Accéder à mon compte</a>
         </div>
         
         <div class="footer">
