--- a/views/order-confirmation-email.ejs
+++ b/views/order-confirmation-email.ejs
@@ -136,11 +136,14 @@
                 border-bottom: 1px solid #eee;
               "
             >
+             <span style="font-weight: 500"
+                ><%= item.name %> </span
+              >
               <span style="font-weight: 500"
-                ><%= item.name %> × <%= item.quantity %></span
+                ><%= item.quantity %> *</span
               >
               <span style="color: #f9892a; font-weight: 600"
-                ><%= item.price %> MAD</span
+                ><%= item.price %> </span
               >
             </div>
             <% }); %>
@@ -163,6 +166,7 @@
                 display: flex;
                 justify-content: space-between;
                 font-weight: 700;
+                gap:10px;
                 font-size: 18px;
                 color: #022855;
                 margin-top: 10px;
@@ -172,7 +176,7 @@
             >
               <span style="font-weight: 700">TOTAL</span>
               <span style="color: #f9892a; font-weight: 700"
-                ><%= totalAmount %> MAD</span
+                ><%= totalAmount %> </span
               >
             </div>
           </div>
