--- a/views/order-confirmation-email.ejs
+++ b/views/order-confirmation-email.ejs
@@ -137,10 +137,13 @@
               "
             >
               <span style="font-weight: 500; margin-right: 12px"
-                ><%= item.name %>
+                ><%= item.name %> :
               </span>
-              <span style="font-weight: 500; margin-right: 5px"><%= item.quantity %> * </span>
-              <span style="color: #f9892a; font-weight: 600; margin-left: 12px"
+              <span style="font-weight: 500; margin-right: 5px"
+                ><%= item.quantity %>
+              </span>
+              <span style="margin-right: 5px">*</span>
+              <span style="color: #f9892a; font-weight: 600; margin-left: 5px"
                 ><%= item.price %>
               </span>
             </div>
