--- a/views/order-confirmation-email.ejs
+++ b/views/order-confirmation-email.ejs
@@ -157,9 +157,9 @@
                 border-bottom: 1px solid #eee;
               "
             >
-              <span style="font-weight: 500">Frais de livraison</span>
+              <span style="font-weight: 500">Frais de livraison : </span>
               <span style="color: #f9892a; font-weight: 600"
-                ><%= shippingCost %> MAD</span
+                ><%= shippingCost %> </span
               >
             </div>
             <div
@@ -175,7 +175,7 @@
                 border-top: 2px solid #ddd;
               "
             >
-              <span style="font-weight: 700">TOTAL</span>
+              <span style="font-weight: 700; margin-left: 8px">TOTAL : </span>
               <span style="color: #f9892a; font-weight: 700"
                 ><%= totalAmount %>
               </span>
