--- a/views/order-confirmation-email.ejs
+++ b/views/order-confirmation-email.ejs
@@ -154,7 +154,7 @@
                 Qté: <%= item.quantity %>
               </div>
               <div style="flex: 1; text-align: right; font-weight: 600; color: #172132">
-                <%= (item.price * item.quantity).toFixed(2) %> €
+                <%= item.price %> €
               </div>
             </div>
             <% }); %>
