--- a/views/order-confirmation-email.ejs
+++ b/views/order-confirmation-email.ejs
@@ -159,7 +159,7 @@
                   color: #172132;
                 "
               >
-                <%= item.price %> €
+              -----&gt;  <%= item.price %>
               </div>
             </div>
             <% }); %>
