--- a/views/order-confirmation-email.ejs
+++ b/views/order-confirmation-email.ejs
@@ -157,9 +157,10 @@
                   text-align: right;
                   font-weight: 600;
                   color: #172132;
+                  margin-left: 3px;
                 "
               >
-              -----&gt;  <%= item.price %>
+                -----&gt; <%= item.price %>
               </div>
             </div>
             <% }); %>
@@ -176,7 +177,17 @@
               "
             >
               <div style="flex: 2; font-weight: 500">Frais de livraison</div>
-              <div style="flex: 1; text-align: center; color: #666; margin-inline: 5px;">:</div>
+              <div
+                style="
+                  flex: 1;
+                  text-align: center;
+                  color: #666;
+                  margin-left: 5px;
+                  margin-right: 5px;
+                "
+              >
+                :
+              </div>
               <div
                 style="
                   flex: 1;
@@ -208,7 +219,14 @@
               <div style="flex: 2; font-weight: 700; color: #022855">
                 TOTAL :
               </div>
-              <div style="flex: 1; text-align: center;margin-inline: 5px;"></div>
+              <div
+                style="
+                  flex: 1;
+                  text-align: center;
+                  margin-left: 5px;
+                  margin-right: 5px;
+                "
+              ></div>
               <div
                 style="
                   flex: 1;
